--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.6.0",
     "firebase-tools": "^7.10.0",
+    "googleapis": "^39.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^4.0.0",
