--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
-    "start": "npm run shell",
+    "start": "functions-framework --target=createDriveFolders",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -12,6 +12,7 @@
     "node": "8"
   },
   "dependencies": {
+    "@google-cloud/functions-framework": "^1.3.2",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "googleapis": "^39.2.0"
