--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^1.3.2",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.6.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "googleapis": "^39.2.0"
