--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.2",
+    "@slack/web-api": "^5.6.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "firebase": "^7.6.0",
     "firebase-tools": "^7.10.0",
     "googleapis": "^39.2.0",
