--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,10 @@
     "firebase": "^7.6.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "googleapis": "^39.2.0"
+    "googleapis": "^39.2.0",
+    "graphql-request": "^1.8.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
