--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
-    "start": "functions-framework --target=createDriveFolders",
+    "start": "functions-framework",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^1.3.2",
     "@slack/web-api": "^5.6.0",
+    "axios": "^0.19.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.6.0",
     "firebase-admin": "^8.6.0",
