--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^1.3.2",
+    "@sendgrid/mail": "^6.5.0",
     "@slack/web-api": "^5.6.0",
     "axios": "^0.19.1",
     "dotenv": "^8.2.0",
