--- a/functions/package.json
+++ b/functions/package.json
@@ -22,6 +22,7 @@
     "firebase-functions": "^3.3.0",
     "googleapis": "^39.2.0",
     "graphql-request": "^1.8.2",
+    "moment": "^2.24.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   },
