--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "@slack/web-api": "^5.6.0",
     "axios": "^0.19.1",
     "dotenv": "^8.2.0",
+    "facebook-nodejs-business-sdk": "^6.0.0",
     "firebase": "^7.6.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
