added error to frameio process to monday

--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,9 @@
     "@sendgrid/mail": "^6.5.0",
     "@slack/web-api": "^5.6.0",
     "axios": "^0.19.1",
+    "bexio": "^0.7.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "facebook-nodejs-business-sdk": "^6.0.0",
     "firebase": "^7.6.0",
     "firebase-admin": "^8.6.0",
