--- a/firebase.json
+++ b/firebase.json
@@ -16,5 +16,13 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    }
   }
 }
