--- a/functions/package.json
+++ b/functions/package.json
@@ -25,6 +25,7 @@
 		"googleapis": "^39.2.0",
 		"graphql-request": "^1.8.2",
 		"moment": "^2.24.0",
+		"openid-client": "^3.12.2",
 		"request": "^2.88.0",
 		"request-promise": "^4.2.5"
 	},
