--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "dotenv": "^8.2.0",
     "firebase": "^7.6.0",
     "firebase-tools": "^7.10.0",
     "googleapis": "^39.2.0",
@@ -18,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-firebaseui": "^4.0.0",
     "react-google-button": "^0.7.0",
+    "react-iframe": "^1.8.0",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.1.1",
     "react-router-dom": "^5.1.2",
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "jasmine": "^3.5.0"
   }
 }
