--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.4.1",
+    "@devexpress/dx-react-scheduler": "^2.4.1",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.4.1",
     "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
     "@slack/web-api": "^5.6.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
