--- a/package.json
+++ b/package.json
@@ -1,62 +1,62 @@
 {
-  "name": "automation",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@devexpress/dx-react-core": "^2.4.1",
-    "@devexpress/dx-react-scheduler": "^2.4.1",
-    "@devexpress/dx-react-scheduler-material-ui": "^2.4.1",
-    "@material-ui/core": "^4.9.3",
-    "@material-ui/icons": "^4.9.1",
-    "@slack/web-api": "^5.6.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "firebase": "^7.6.0",
-    "firebase-tools": "^7.10.0",
-    "googleapis": "^39.2.0",
-    "history": "^4.10.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-firebaseui": "^4.0.0",
-    "react-google-button": "^0.7.0",
-    "react-iframe": "^1.8.0",
-    "react-rating": "^2.0.4",
-    "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.1.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "react-sweet-progress": "^1.1.2",
-    "redux": "^4.0.5",
-    "redux-firestore": "^0.12.0",
-    "redux-logger": "^3.0.6"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run-script build && firebase deploy",
-    "analyse": "source-map-explorer build/static/js/main.*"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "jasmine": "^3.5.0"
-  }
+	"name": "automation",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@devexpress/dx-react-core": "^2.4.1",
+		"@devexpress/dx-react-scheduler": "^2.4.1",
+		"@devexpress/dx-react-scheduler-material-ui": "^2.4.1",
+		"@material-ui/core": "^4.9.3",
+		"@material-ui/icons": "^4.9.1",
+		"@slack/web-api": "^5.6.0",
+		"axios": "^0.19.2",
+		"firebase": "^7.6.0",
+		"firebase-tools": "^7.10.0",
+		"googleapis": "^39.2.0",
+		"history": "^4.10.1",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-firebaseui": "^4.0.0",
+		"react-google-button": "^0.7.0",
+		"react-iframe": "^1.8.0",
+		"react-rating": "^2.0.4",
+		"react-redux": "^7.1.3",
+		"react-redux-firebase": "^3.1.1",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.3.0",
+		"react-sweet-progress": "^1.1.2",
+		"redux": "^4.0.5",
+		"redux-firestore": "^0.12.0",
+		"redux-logger": "^3.0.6"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"deploy": "npm run-script build && firebase deploy",
+		"analyse": "source-map-explorer build/static/js/main.*",
+		"e2e": "cypress open"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"chance": "^1.1.4",
+		"cypress": "^4.0.2",
+		"dotenv": "^8.2.0",
+		"eslint-plugin-cypress": "^2.10.3"
+	}
 }
