--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -5,3 +5,9 @@ token.json
 credentials.json
 client-secret.json
 gg.json
+/functions/serviceAccountKey.json
+/functions/client-secret.json
+/functions/credentials.json
+/functions/token.json
+/functions/automationKey.json
+automationKey.json
