--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,8 @@
 		"shell": "firebase functions:shell",
 		"start": "functions-framework",
 		"deploy": "firebase deploy --only functions",
-		"logs": "firebase functions:log"
+		"logs": "firebase functions:log",
+		"test": "jest --watchAll --env node"
 	},
 	"engines": {
 		"node": "8"
@@ -30,7 +31,9 @@
 		"request-promise": "^4.2.5"
 	},
 	"devDependencies": {
-		"firebase-functions-test": "^0.1.6"
+		"@types/jest": "^25.1.3",
+		"firebase-functions-test": "^0.1.6",
+		"jest": "^25.1.0"
 	},
 	"private": true
 }
