new contact to mando db being created if email is not same on firebase

--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
 		"start": "functions-framework",
 		"deploy": "firebase deploy --only functions",
 		"logs": "firebase functions:log",
-		"test": "jest --watchAll --env node"
+		"test": "jest --watchAll --detectOpenHandles --env node"
 	},
 	"engines": {
 		"node": "8"
